crates/backyard-lexer/tests/snapshots/comment__doc_param_type_38.snap
---
source: crates/backyard-lexer/tests/comment.rs
expression: tokens
snapshot_kind: text
---
- token_type: CommentDocOpen
  value:
    - 47
    - 42
    - 42
  line: 1
  column: 0
  offset: 0
- token_type: DocTagParam
  value:
    - 64
    - 112
    - 97
    - 114
    - 97
    - 109
  line: 1
  column: 4
  offset: 4
- token_type: Type
  value:
    - 97
    - 114
    - 114
    - 97
    - 121
  line: 1
  column: 11
  offset: 11
- token_type: LeftCurlyBracket
  value:
    - 123
  line: 1
  column: 16
  offset: 16
- token_type: Type
  value:
    - 105
    - 110
    - 116
  line: 1
  column: 17
  offset: 17
- token_type: Comma
  value:
    - 44
  line: 1
  column: 20
  offset: 20
- token_type: Type
  value:
    - 105
    - 110
    - 116
  line: 1
  column: 22
  offset: 22
- token_type: RightCurlyBracket
  value:
    - 125
  line: 1
  column: 25
  offset: 25
- token_type: Variable
  value:
    - 36
    - 102
    - 111
    - 111
  line: 1
  column: 27
  offset: 27
- token_type: CommentDocClose
  value:
    - 42
    - 47
  line: 1
  column: 32
  offset: 32
